@@ -4,6 +4,8 @@ Changelog
 1.0.2 - unreleased
 ------------------
 
+* Added the ``addOnly`` option
+  [keul]
 
 1.0.1 - 2011-01-25
 ------------------
